gallery issue solved, flex wrap

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -2,18 +2,17 @@ div#first-topic {
   background: white
 }
 
-div#gallery h2 {
-  grid-column: 1/5;
+div#first-topic h2 {
+  text-align: center;
   height: auto;
   color: black;
  background: white;
  font-size: 2rem;
+ margin: 1rem 1rem;
  text-shadow: 0.2rem 0.2rem 0.5rem rgba(153, 153, 153, 0.68);;
 }
 
-div#gallery {
-  grid-column: 1/5;
-}
+
 
 div#gallery h2:hover {
   height: auto;
